Fixed flexbox for body, added margins to content for better spacing

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,11 @@
 html, body {
     height: 100%;
 }
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 header {
     display: flex;
     justify-content: center;
@@ -22,32 +27,39 @@ header h1 {
     padding: 15px, 0px;
 }
 main {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 .score-counter {
     display: flex;
     justify-content: center;
     padding: 10px;
+    margin: 10px;
 }
 .score-counter div{
     padding: 0px 40px;
+    margin: 10px;
 }
 button {
+    height: 30px;
     width: 80px;
+    margin: 10px;
+    background-color: #161b22;
+}
+.indicators {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    margin: 10px;
+}
+.indicators p{
+    padding: 0px 40px;
+    margin: 10px;
 }
 footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-}
-
-.indicators {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-}
-.indicators p{
-    padding: 0px 40px;
 }
